--- a/style.css
+++ b/style.css
@@ -83,9 +83,12 @@ header > h1{
 header > p{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.2em;
-    max-width: 400px;
+    max-width: 600px;
     text-align: center;
-    margin: 20px auto;
+    margin: auto;
+    padding-right: 10px;
+    padding-left: 10px;
+    padding-bottom: 50px;
     color: white;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.316);
 }
@@ -123,6 +126,7 @@ a:hover{
 nav{
     background-color: green;
     padding: 10px;
+    box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.192);
 }
 nav > a{
     color: white;
